--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 					<div id='container'>
 						<ul class="main">
 							<li><a href="https://matsuri.5ch.net/magazin/subback.html">5ch</a></li>
-							<li><a href="https://discord.com/channels/">discord</a></li>
-							<li><a href="https://bookmeter.com">bookmeter</a></li>
 							<li><a href="https://twitter.com">twitter</a></li>
+							<li><a href="https://www.weblio.jp/">weblio</a></li>
+							<li><a href="https://discord.com/channels/">discord</a></li>
 							<li><a href="https://boards.4channel.org/jp/catalog">/jp/</a></li>
 							<li><a href="https://erogamescape.dyndns.org/~ap2/ero/toukei_kaiseki/">egs</a></li>
 						</li>
