--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 					</div>
 					<div id='container'>
 						<ul class="main">
-							<li><a href="https://matsuri.5ch.net/magazin/subback.html">5ch</a></li>
+							<li><a href="https://lavender.5ch.net/tvd/subback.html">5ch</a></li>
 							<li><a href="https://twitter.com">twitter</a></li>
 							<li><a href="https://www.weblio.jp/">weblio</a></li>
 							<li><a href="https://discord.com/channels/">discord</a></li>
