--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 							<li><a href="https://discord.com/channels/">discord</a></li>
 							<li><a href="https://boards.4channel.org/jp/catalog">/jp/</a></li>
 							<li><a href="https://erogamescape.dyndns.org/~ap2/ero/toukei_kaiseki/">egs</a></li>
-							<li><a href="https://phoebe.bbspink.com/hgame/subback.html">5ch エロゲー</a></li>
-							<li><a href="https://mercury.bbspink.com/erog/subback.html">5ch エロゲーネタ</a></li>
+							<li><a href="https://phoebe.bbspink.com/hgame/subback.html">5ch eroge</a></li>
+							<li><a href="https://mercury.bbspink.com/erog/subback.html">5ch eroge neta</a></li>
 							
 						</li>
 					</ul>
