--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 					</div>
 					<div id='container'>
 						<ul class="main">
-							<li><a href="https://lavender.5ch.net/tvd/subback.html">5ch dorama</a></li>
+							<li><a href="https://lavender.5ch.net/tvd/subback.html">5ch</a></li>
 							<li><a href="https://twitter.com">twitter</a></li>
 							<li><a href="https://www.weblio.jp/">weblio</a></li>
 							<li><a href="https://discord.com/channels/">discord</a></li>
 							<li><a href="https://boards.4channel.org/jp/catalog">/jp/</a></li>
 							<li><a href="https://erogamescape.dyndns.org/~ap2/ero/toukei_kaiseki/">egs</a></li>
-							<li><a href="https://phoebe.bbspink.com/hgame/subback.html">5ch eroge</a></li>
+							<li><a href="https://phoebe.bbspink.com/hgame/subback.html">5ch</a></li>
 							
 						</li>
 					</ul>
